Hover underline bug on small screens

--- a/site/public/global.css
+++ b/site/public/global.css
@@ -59,7 +59,7 @@ h1 b:after {
   transition: all 0.4s;
 }
 h1 b:hover:after {
-  height: 38px;
+  height: 50%;
   bottom: 13px;
 }
 
@@ -86,7 +86,7 @@ h2 b:after {
   transition: all 0.4s;
 }
 h2 b:hover:after {
-  height: 30px;
+  height: 50%;
   bottom: 10px;
 }
 
